# lifelikegame

./: .env .example  .env.example  .gitignore  Dockerfile  FutureDebt.md  README.md  SPEC.md  database.md  docker-compose.yml  everyday.md  main.py  markdown.md  pyproject.toml  readme_ai.md  redemption.md  requirements.txt  usecase.md
.github/workflows/: ci.yml
app/: main.py
backend/: Dockerfile  requirements-lock.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 12c5c9f9b83c_add_goals_table.py  144d122034ae_add_status_into_rewards_table.py  262d2a29711f_add_scoring_snapshot_json_to_task_.py  2c0f0576cb08_add_deleted_at_columns.py  313c926b5af2_add_current_value_to_user_column.py  395e4081eb5a_create_redemptions_table.py  4e77fd45d233_create_point_ledger_table.py  7b188534a8d4_create_tasks_table.py  897c4119ff5a_add_deleted_at_columns.py  9b53f537ff01_create_task_instance_table.py  9bfbb0fbb950_create_task_schedules_table.py  9d8c6d8ec8f0_seed_default_scoring_scheme.py  (+4 more)
backend/app/: db.py  main.py  scheduler.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_goals.py  test_point_ledgers.py  test_redemption.py  test_reward.py  test_scoring_schemes.py  test_task_instances.py  test_task_schedules.py  test_tasks.py  test_tasks_workflow.py  test_users.py  test_workflow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
lifelikegame/: db.py  main.py  settings.py
src/lifelikegame/: main.py
src/lifelikegame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+137 files in other folders)
